# pxl

./: .gitignore  Cargo.toml  README.md  justfile
examples/life/: Cargo.toml
examples/life/src/: cell.rs  main.rs
examples/shaders/: Cargo.toml  fragment_shaders.rs
examples/shaders/src/: vertex_shaders.rs
pxl/: Cargo.toml  justfile
pxl-build/: Cargo.toml  README.md
pxl-build-test/: Cargo.toml  build.rs
pxl-build-test/src/: lib.rs
pxl-build/src/: common.rs  error.rs  lib.rs  module.rs  resource.rs
pxl-mono/: Cargo.toml
pxl-mono/src/: main.rs
pxl/examples/: blaster.rs  headstone.rs  life.rs
pxl/examples/shaders/: fragment_shaders.rs  main.rs  vertex_shaders.rs
pxl/src/: fragment_shader.glsl  glow_filter_shader.glsl  lib.rs  vertex_shader.glsl
pxl/src/runtime/: common.rs  display.rs  error.rs  mod.rs  shader_cache.rs  speaker.rs
src/: fragment_shader.glsl  lib.rs  vertex_shader.glsl
src/runtime/: display.rs  error.rs  fragment.glsl  mod.rs  speaker.rs
