[package]
name          = "pxl-build"
version       = "0.0.9"
authors       = ["Casey Rodarmor <casey@rodarmor.com>"]
description   = "👷‍♀️ A compile-time resource loader for use with the `pxl` crate"
license       = "CC0-1.0"
homepage      = "https://pxl.rs"
repository    = "https://github.com/casey/pxl"
documentation = "https://docs.rs/pxl-build"

[dependencies]
image       = "0.19.0"
lazy_static = "1.0.1"
proc-macro2 = "0.4.6"
quote       = "0.6.3"
regex       = "1.0.1"
syn         = "0.14.2"
palette     = "0.4.0"

[dev-dependencies]
tempfile = "3.0.2"
pxl      = {path = "../pxl", version = "0.0.9"}
